<resources>
    <string name="app_name">kodris old</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schooltitle">schoolTitle</string>
    <string name="email">email</string>
    <string name="hello">hello</string>
    <string name="title">title</string>
    <string name="lilly">Hey Lilly,</string>
    <string name="hey_lilly">Hey Lilly,</string>
    <string name="search_teachers_schools" >Search Teachers and Schools</string>
    <string name="purchease_a_kodris_token" >Purchease a Kodris Token</string>
    <string name="purchase_a_primium_yearly_student_licence" >purchase a Premium Yearly Student Licence.</string>
    <string name="title_toolbar">Hey Lilly,</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="id">Id</string>
    <string name="emailShow">email</string>
    <string name="schoolname">SchoolName</string>
    <string name="establish_date">Establish On .</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="website">WebSite</string>
    <string name="otherCcontent">Other Type Content not image not pdf</string>
    <string name="settings">Settings</string>
    <string name="message">Message</string>
    <string name="home">Home</string>
    <string name="chat_with_school">chat with school</string>
    <string name="error">Error</string>
    <string name="welcome_to_kodris_africa">Welcome To Kodris Africa</string>
    <string name="lorem_ipsm_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem ipsm Is Simply Dummy Text Of The Printing And TypeSetting industry.</string>
    <string name="kodris_gmail_com">     Kodris@gmail.com</string>
    <string name="password">   Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="footer">Not an Existing User?</string>
    <string name="footer2">Sign Up</string>
    <string name="click">\"Forget password click \"</string>
    <string name="dataloading">Loading.......</string>
    <string name="lillyName">Lilly</string>
    <string name="ExistingUser">Already an Existing User?</string>
    <string name="i_hereby_accept_all_the">I hereby accept All the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="LoggedIn">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="internet">\"please check your Internet Connection \"</string>
    <string name="homeFragment">Home Fragment</string>
    <string name="messageFragment">Message Fragment</string>
    <string name="settingFragment">Setting Fragment</string>
    <string name="nothing">nothing</string>
    <string name="name">TeacherName</string>
    <string name="specialization_for">Specialization For</string>
    <string name="titleToolbar">Teacher\'s Details</string>
    <string name="education">education</string>
    <string name="experience">Experience</string>
    <string name="school_name">school_name</string>
    <string name="setting">Settings</string>
    <string name="lilly_Paul">Lilly Paul</string>
    <string name="chats">Chats</string>
    <string name="purchase">Purchase History</string>
    <string name="subscriptionPlan">Subscription Plans</string>
    <string name="faq">FAQS</string>
    <string name="term_and_condition">Term And Condition</string>
    <string name="logOut">Log Out</string>
    <string name="min">20min</string>
    <string name="profileName">Name</string>
    <string name="type_a_message">Type a Message....</string>
    <string name="chat_msg">Message</string>
    <string name="timer">Timer</string>
    <string name="teacher">Teacher</string>
    <string name="school">School</string>
    <string name="parent">Parent</string>
    <string name="select_language">select Language</string>
    <string name="submitData">Submit</string>
    <string name="kodris" translatable="false">kodris@mail.com</string>
</resources>